--- a/media-player-android/package.json
+++ b/media-player-android/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "copy":"cpy dist/* ../android_view/app/src/main/assets/ --parents",
+    "build:android": "vite build && npm run copy",
     "lint": "eslint .",
     "preview": "vite preview"
   },
